2001-11-04  Toon Moene  <toon@moene.indiv.nluug.nl>
	* g77.texi: Split off invoke.texi (preliminary to using it
	to generate a man page).
	* Make-lang.in: Reflect in build rules.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46775 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-04  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* g77.texi: Split off invoke.texi (preliminary to using it
+	to generate a man page).
+	* Make-lang.in: Reflect in build rules.
+
 Fri Nov  2 10:51:34 2001  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* com.c (ffecom_initialize_char_syntax_, U_CHAR, is_idchar,
