--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -9077,8 +9077,9 @@
 ;; Code to initialize the TOC register...
 
 (define_insn "load_toc_aix_si"
-  [(set (match_operand:SI 0 "register_operand" "=r")
-	(unspec:SI [(const_int 0)] 7))]
+  [(parallel [(set (match_operand:SI 0 "register_operand" "=r")
+		   (unspec:SI [(const_int 0)] 7))
+	      (use (reg:SI 2))])]
   "DEFAULT_ABI == ABI_AIX && TARGET_32BIT"
   "*
 {
@@ -9091,8 +9092,9 @@
   [(set_attr "type" "load")])
 
 (define_insn "load_toc_aix_di"
-  [(set (match_operand:DI 0 "register_operand" "=r")
-	(unspec:DI [(const_int 0)] 7))]
+  [(parallel [(set (match_operand:DI 0 "register_operand" "=r")
+		   (unspec:DI [(const_int 0)] 7))
+	      (use (reg:DI 2))])]
   "DEFAULT_ABI == ABI_AIX && TARGET_64BIT"
   "*
 {
