* java/util/ResourceBundle.java (class Security): Now static.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46781 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-05  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* java/util/ResourceBundle.java (class Security): Now static.
+
 2001-11-04  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* java/util/ResourceBundle.java (getClassContext): Removed.
