--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2001-11-05  Nick Clifton  <nickc@cambridge.redhat.com>
 
+	* config/arm/arm.c (arm_return_in_memory): Cope with
+	int_size_in_bytes returning -1.
+
 	* config/arm/unknown-elf.h (ASM_OUTPUT_ALIGNED_DECL_LOCAL): Handle
 	DECL being NULL.
 
