* config/rs6000/rs6000.c (rs6000_select_section): Handle 	CONSTRUCTORs too.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46792 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-05  Geoffrey Keating  <geoffk@redhat.com>
+
+	* config/rs6000/rs6000.c (rs6000_select_section): Handle
+	CONSTRUCTORs too.
+
 2001-11-05  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* config/arm/arm.c (arm_return_in_memory): Cope with
