* cppexp.c (lex, parse_defined): Update warning about defined. 	* gcc.dg/cpp/defined.c: Update.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46794 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-05  Neil Booth  <neil@cat.daikokuya.demon.co.uk>
+
+	* cppexp.c (lex, parse_defined): Update warning about defined.
+
 2001-11-05  Geoffrey Keating  <geoffk@redhat.com>
 
 	* config/rs6000/rs6000.c (rs6000_select_section): Handle
