* config/rs6000/rs6000.c (rs6000_select_section): Handle 	CONSTRUCTORs _correctly_.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46798 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-05  Geoffrey Keating  <geoffk@redhat.com>
+
+	* config/rs6000/rs6000.c (rs6000_select_section): Handle
+	CONSTRUCTORs _correctly_.
+
 2001-11-05  Neil Booth  <neil@cat.daikokuya.demon.co.uk>
 
 	* c-decl.c (delete_block): Remove.
