* gcc_release: Don't require a username if running locally.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46809 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-06  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc_release: Don't require a username if running locally.
+
 2001-11-05  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* update_web_docs: Eliminate warnings about keeping files from web
