--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-06  Neil Booth  <neil@cat.daikokuya.demon.co.uk>
+
+	* Make-lang.in: Update.
+	* cp-lang.c: Include langhooks-def.h.
+
 2001-11-04  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
 
 	* pt.c (tsubst_copy): Call tsubst for TYPEOF_EXPR.
