--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+Tue Nov  6 21:17:47 2001  Neil Booth  <neil@cat.daikokuya.demon.co.uk>
+
+	* com.c: Include langhooks-def.h.
+	* Make-lang.in: Update.
+
 2001-11-04  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	* g77.texi: Split off invoke.texi (preliminary to using it
