* HACKING: Make people commit their own patches.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46816 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-06  Tom Tromey  <tromey@redhat.com>
+
+	* HACKING: Make people commit their own patches.
+
 2001-11-05  Tom Tromey  <tromey@redhat.com>
 
 	* java/lang/Class.h (Class): Made _Jv_BytecodeVerifier a friend.
