--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-06  Steve Christiansen  <smc@us.ibm.com>
+
+	* loop.c (loop_regs_scan):  Don't invalidate PIC register.
+
 2001-11-06  Eric Christopher  <echristo@redhat.com>
 
 	* config/mips/mips.md(movdf_internal2): Add constraints for float
