* gcov.c (output_data): Use IS_ABSOLUTE_PATHNAME to         test for absolute pathnames.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46819 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-06  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* gcov.c (output_data): Use IS_ABSOLUTE_PATHNAME to
+	test for absolute pathnames.
+
 2001-11-06  Olivier Hainque <hainque@act-europe.fr>
 
 	* unwind-dw2.c (execute_cfa_program): Evaluate call frame
