* config/alpha/elf.h (DO_SELECT_SECTION): TREE_READONLY is not         defined for a CONSTRUCTOR; don't check it.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46820 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-06  Richard Henderson  <rth@redhat.com>
+
+	* config/alpha/elf.h (DO_SELECT_SECTION): TREE_READONLY is not
+	defined for a CONSTRUCTOR; don't check it.
+
 2001-11-06  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* gcov.c (output_data): Use IS_ABSOLUTE_PATHNAME to
