--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+Wed Nov  7 13:33:34 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* expmed.c (expand_mult): Force operand to register before computing
+	cost.
+	* i386.c (x86_decompose_lea): New global vairable.
+	* i386.h (x86_decompose_lea): Declare.
+	(TARGET_DECOMPOSE_LEA): New macro.
+	(RTX_COST): Handle leas properly.
+
 2001-11-06  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/elf.h (DO_SELECT_SECTION): TREE_READONLY is not
