--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-07  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* doc/gcc.texi: Move terminology and spelling conventions to
+	htdocs/codingconventions.html.
+
 2001-11-07  Graham Stott  <grahams@redhat.com>
 
 	* cse.c (cse_insn): Emit BARRIER after unconditional jump.
