2001-11-07  Laurent Guerby <guerby@acm.org>
	* gcc_update (files_and_dependencies): Add Ada dependencies.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46832 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-07  Laurent Guerby <guerby@acm.org>
+
+	* gcc_update (files_and_dependencies): Add Ada dependencies.
+
 2001-10-08  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* snapshot: Remove.
